Added font sizes and other small changes

--- a/3/index.html
+++ b/3/index.html
@@ -1,57 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>HTML5 tutorial</title>
-    <meta name="description" content="Improve your HTML5 skills" />
-    <meta
-      name="keywords"
-      content="html, tutorials, tutorial, html5, study, labs, seo, divs, tables, tags"
-    />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
 
-  <body>
-    <header>
-      <h1 class="logo">Web Programming Tutorials</h1>
+<head>
+  <meta charset="utf-8" />
+  <title>HTML5 tutorial</title>
+  <meta name="description" content="Improve your HTML5 skills" />
+  <meta name="keywords" content="html, tutorials, tutorial, html5, study, labs, seo, divs, tables, tags" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
 
-      <nav id="topnav">
-        <ul class="menu">
-          <li class="selected"><a href="index.html">Home</a></li>
-          <li><a href="tags.html">Basic tags</a></li>
-          <li><a href="tables.html">Tables</a></li>
-          <li><a href="divs.html">Divs</a></li>
-          <li><a href="seo.html">SEO</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+<body>
+  <header>
+    <h1 class="logo">Web Programming Tutorials</h1>
 
-    <div id="container">
-      <main>
-        <div id="content">
-          <h2>Basic definitions</h2>
-          <dl>
-            <dt>HTML</dt>
-            <dd>
-              Hypertext Markup Language, a standardized system for tagging text
-              files to achieve font, colour, graphic, and hyperlink effects on
-              World Wide Web pages.
-            </dd>
-            <dt>CSS</dt>
-            <dd>
-              CSS. Stands for "Cascading Style Sheet." Cascading style sheets
-              are used to format the layout of Web pages.
-            </dd>
-          </dl>
-        </div>
-      </main>
+    <nav id="topnav">
+      <ul class="menu">
+        <li class="selected"><a href="index.html">Home</a></li>
+        <li><a href="tags.html">Basic tags</a></li>
+        <li><a href="tables.html">Tables</a></li>
+        <li><a href="divs.html">Divs</a></li>
+        <li><a href="seo.html">SEO</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-      <footer>
-        <div id="footer">
-          This is our footer.
-        </div>
-      </footer>
-    </div>
-  </body>
+  <div id="container">
+    <main>
+      <div id="content">
+        <h2 class="pageHeader">Basic definitions</h2>
+        <dl>
+          <dt>HTML</dt>
+          <dd>
+            Hypertext Markup Language, a standardized system for tagging text
+            files to achieve font, colour, graphic, and hyperlink effects on
+            World Wide Web pages.
+          </dd>
+          <dt>CSS</dt>
+          <dd>
+            CSS. Stands for "Cascading Style Sheet." Cascading style sheets
+            are used to format the layout of Web pages.
+          </dd>
+        </dl>
+      </div>
+    </main>
+
+    <footer>
+      <div id="footer">
+        This is our footer.
+      </div>
+    </footer>
+  </div>
+</body>
+
 </html>
