--- a/3/seo.html
+++ b/3/seo.html
@@ -1,68 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>HTML5 tutorial - SEO</title>
-    <meta name="description" content="Improve your HTML5 skills" />
-    <meta
-      name="keywords"
-      content="html, tutorials, tutorial, html5, study, labs"
-    />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
 
-  <body>
-    <header>
-      <h1 class="logo">Web Programming Tutorials</h1>
+<head>
+  <meta charset="utf-8" />
+  <title>HTML5 tutorial - SEO</title>
+  <meta name="description" content="Improve your HTML5 skills" />
+  <meta name="keywords" content="html, tutorials, tutorial, html5, study, labs" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
 
-      <nav id="topnav">
-        <ul class="menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="tags.html">Basic tags</a></li>
-          <li><a href="tables.html">Tables</a></li>
-          <li><a href="divs.html">Divs</a></li>
-          <li class="selected"><a href="seo.html">SEO</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+<body>
+  <header>
+    <h1 class="logo">Web Programming Tutorials</h1>
 
-    <div id="container">
-      <main>
-        <div id="content">
-          <h2>SEO</h2>
+    <nav id="topnav">
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tags.html">Basic tags</a></li>
+        <li><a href="tables.html">Tables</a></li>
+        <li><a href="divs.html">Divs</a></li>
+        <li class="selected"><a href="seo.html">SEO</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-          <div class="examples">
-            <p>
-              <b>Search engine optimization</b>, or SEO, is the process of
-              improving your website so that it achieves a higher ranking in
-              search engine SERPs, and so that more search engine users click on
-              your website listing in the search engine results.
-            </p>
-            <h2>Some rules for SEO</h2>
-            <ol>
-              <li>Use Title tags</li>
-              <li>Don't underestimate Header tags</li>
-              <li>Add Alt tags in images</li>
-            </ol>
-          </div>
+  <div id="container">
+    <main>
+      <div id="content">
+        <h2 class="pageHeader">SEO</h2>
 
-          <div class="images">
-            <img
-              src="img/seo.jpg"
-              alt="SEO image with some HTML code"
-              height="250"
-              width="500"
-            />
-          </div>
+        <div class="examples">
+          <p>
+            <b>Search engine optimization</b>, or SEO, is the process of
+            improving your website so that it achieves a higher ranking in
+            search engine SERPs, and so that more search engine users click on
+            your website listing in the search engine results.
+          </p>
+          <h2>Some rules for SEO</h2>
+          <ol>
+            <li>Use Title tags</li>
+            <li>Don't underestimate Header tags</li>
+            <li>Add Alt tags in images</li>
+          </ol>
         </div>
-      </main>
 
-      <footer>
-        <div id="footer">
-          This is our footer.
+        <div class="images">
+          <img src="img/seo.jpg" alt="SEO image with some HTML code" height="250" width="500" />
         </div>
-      </footer>
-    </div>
-  </body>
+      </div>
+    </main>
+
+    <footer>
+      <div id="footer">
+        This is our footer.
+      </div>
+    </footer>
+  </div>
+</body>
+
 </html>
