--- a/3/tags.html
+++ b/3/tags.html
@@ -1,62 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>HTML5 tutorial - tags</title>
-    <meta name="description" content="Improve your HTML5 skills" />
-    <meta
-      name="keywords"
-      content="html, tutorials, tutorial, html5, study, labs"
-    />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
 
-  <body>
-    <header>
-      <h1 class="logo">Web Programming Tutorials</h1>
+<head>
+  <meta charset="utf-8" />
+  <title>HTML5 tutorial - tags</title>
+  <meta name="description" content="Improve your HTML5 skills" />
+  <meta name="keywords" content="html, tutorials, tutorial, html5, study, labs" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
 
-      <nav id="topnav">
-        <ul class="menu">
-          <li><a href="index.html">Home</a></li>
-          <li class="selected"><a href="tags.html">Basic tags</a></li>
-          <li><a href="tables.html">Tables</a></li>
-          <li><a href="divs.html">Divs</a></li>
-          <li><a href="seo.html">SEO</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+<body>
+  <header>
+    <h1 class="logo">Web Programming Tutorials</h1>
 
-    <div id="container">
-      <main>
-        <div id="content">
-          <h2>Basic HTML tags</h2>
+    <nav id="topnav">
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li class="selected"><a href="tags.html">Basic tags</a></li>
+        <li><a href="tables.html">Tables</a></li>
+        <li><a href="divs.html">Divs</a></li>
+        <li><a href="seo.html">SEO</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-          <div class="examples">
-            <h3>This is a header. They go from h1 to h6.</h3>
-            <p>This is a sample paragraph, very basic HTML tag.</p>
-            <span
-              >This tag is similar to paragraph but is not surrounded with a
-              block and can be used inline.</span
-            ><br />
-            <b>This text is in bold.</b><br />
-            <i>This one is in italic.</i><br />
-            <span>Some <small>small text</small> inside regular text.</span
-            ><br />
-          </div>
-          <div class="images">
-            <a href="img/tags.PNG" download>
-              <img src="img/tags.PNG" alt="Tags HTML code" />
-            </a>
-          </div>
+  <div id="container">
+    <main>
+      <div id="content">
+        <h2 class="pageHeader">Basic HTML tags</h2>
+
+        <div class="examples">
+          <h3>This is a header. They go from h1 to h6.</h3>
+          <p>This is a sample paragraph, very basic HTML tag.</p>
+          <span>This tag is similar to paragraph but is not surrounded with a
+            block and can be used inline.</span><br />
+          <b>This text is in bold.</b><br />
+          <i>This one is in italic.</i><br />
+          <span>Some <small>small text</small> inside regular text.</span><br />
         </div>
-      </main>
-
-      <footer>
-        <div id="footer">
-          This is our footer.
+        <div class="images">
+          <a href="img/tags.PNG" download>
+            <img src="img/tags.PNG" alt="Tags HTML code" />
+          </a>
         </div>
-      </footer>
-    </div>
-  </body>
+      </div>
+    </main>
+
+    <footer>
+      <div id="footer">
+        This is our footer.
+      </div>
+    </footer>
+  </div>
+</body>
+
 </html>
