--- a/3/contact.html
+++ b/3/contact.html
@@ -1,90 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>HTML5 tutorial</title>
-    <meta name="description" content="Improve your HTML5 skills" />
-    <meta
-      name="keywords"
-      content="html, tutorials, tutorial, html5, study, labs, seo, divs, tables, tags"
-    />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
 
-  <body>
-    <header>
-      <h1 class="logo">Web Programming Tutorials</h1>
+<head>
+  <meta charset="utf-8" />
+  <title>HTML5 tutorial</title>
+  <meta name="description" content="Improve your HTML5 skills" />
+  <meta name="keywords" content="html, tutorials, tutorial, html5, study, labs, seo, divs, tables, tags" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
 
-      <nav id="topnav">
-        <ul class="menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="tags.html">Basic tags</a></li>
-          <li><a href="tables.html">Tables</a></li>
-          <li><a href="divs.html">Divs</a></li>
-          <li><a href="seo.html">SEO</a></li>
-          <li class="selected"><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+<body>
+  <header>
+    <h1 class="logo">Web Programming Tutorials</h1>
 
-    <div id="container">
-      <main>
-        <div id="content-centered">
-          <h2>Let us know your feedback and suggestions</h2>
-          <form
-            action="/script.js"
-            method="get"
-            class="contactFormRow formContainer"
-          >
-            <div id="selection">
-              <label for="userType">User type:</label>
-              <select
-                style="width:100%;"
-                multiple
-                name="user"
-                id="userType"
-                size="3"
-              >
-                <option>Admin</option>
-                <option>User</option>
-                <option>Ringo</option>
-              </select>
-            </div>
-            <div class="contactFormRow">
-              <label for="nickname">Nickname: </label>
-              <input type="text" name="nickname" id="nickname" required />
-            </div>
-            <div class="contactFormRow">
-              <label for="email">E-mail: </label>
-              <input type="email" name="email" id="email" required />
-            </div>
-            <div class="contactFormRow">
-              <label for="feedback">Feedback: </label>
-              <textarea name="feedback" id="feedback"></textarea>
-            </div>
-            <div class="contactFormRow">
-              <label for="rulesCheckbox">Rules: </label>
-              <input
-                type="checkbox"
-                name="rulesCheckbox"
-                value="rulesCheckbox"
-                id="rulesCheckbox"
-                required
-              />
-            </div>
-            <div class="contactFormRow">
-              <input type="submit" value="Send feedback" />
-              <input type="reset" value="Clear" />
-            </div>
-          </form>
-        </div>
-      </main>
+    <nav id="topnav">
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tags.html">Basic tags</a></li>
+        <li><a href="tables.html">Tables</a></li>
+        <li><a href="divs.html">Divs</a></li>
+        <li><a href="seo.html">SEO</a></li>
+        <li class="selected"><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-      <footer>
-        <div id="footer">
-          This is our footer.
-        </div>
-      </footer>
-    </div>
-  </body>
+  <div id="container">
+    <main>
+      <div id="content-centered">
+        <h2 class="pageHeader">Let us know your feedback and suggestions</h2>
+        <form action="/script.js" method="get" class="contactFormRow formContainer">
+          <div id="selection">
+            <label for="userType">User type:</label>
+            <select style="width:100%;" multiple name="user" id="userType" size="3">
+              <option>Admin</option>
+              <option>User</option>
+              <option>Ringo</option>
+            </select>
+          </div>
+          <div class="contactFormRow">
+            <label for="nickname">Nickname: </label>
+            <input type="text" name="nickname" id="nickname" required />
+          </div>
+          <div class="contactFormRow">
+            <label for="email">E-mail: </label>
+            <input type="email" name="email" id="email" required />
+          </div>
+          <div class="contactFormRow">
+            <label for="feedback">Feedback: </label>
+            <textarea name="feedback" id="feedback"></textarea>
+          </div>
+          <div class="contactFormRow">
+            <label for="rulesCheckbox">Rules: </label>
+            <input type="checkbox" name="rulesCheckbox" value="rulesCheckbox" id="rulesCheckbox" required />
+          </div>
+          <div class="contactFormRow">
+            <input type="submit" value="Send feedback" />
+            <input type="reset" value="Clear" />
+          </div>
+        </form>
+      </div>
+    </main>
+
+    <footer>
+      <div id="footer">
+        This is our footer.
+      </div>
+    </footer>
+  </div>
+</body>
+
 </html>
