More CSS properties added

--- a/3/seo.html
+++ b/3/seo.html
@@ -42,6 +42,7 @@
             <li>Use Title tags</li>
             <li>Don't underestimate Header tags</li>
             <li>Add Alt tags in images</li>
+            <li>Use new HTML5 tags</li>
           </ol>
         </div>
 
