Table CSS, visibility, borders

--- a/3/index.html
+++ b/3/index.html
@@ -48,6 +48,7 @@
     <footer>
       <div id="footer">
         This is our footer.
+        <p class="novisible">Can't touch this</p>
       </div>
     </footer>
   </div>
