--- a/3/tables.html
+++ b/3/tables.html
@@ -31,7 +31,7 @@
         <h2 class="pageHeader">Tables</h2>
 
         <div class="examples">
-          <table>
+          <table class="tableBody">
             <tr>
               <th colspan="4" style="width: 300px;">Example table</th>
             </tr>
@@ -77,6 +77,7 @@
       <div id="footer">
         This is our footer.
       </div>
+      <p class="novisible">Can't touch this</p>
     </footer>
   </div>
 </body>
