--- a/3/divs.html
+++ b/3/divs.html
@@ -21,6 +21,13 @@
         <li class="selected"><a href="divs.html">Divs</a></li>
         <li><a href="seo.html">SEO</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li class="dropdown">
+          <button class="dropbtn">General</button>
+          <div class="dropdown-content">
+            <a href="contact.html">Contact</a>
+            <a href="faq.html">FAQ</a>
+          </div>
+        </li>
       </ul>
     </nav>
   </header>
