Shadows, hsla, rgba

--- a/3/faq.html
+++ b/3/faq.html
@@ -35,9 +35,13 @@
         <main>
             <div id="content-centered">
                 <h2 class="pageHeader">Frequently Asked Questions</h2>
-                <h4>Is it worth knowing CSS and HTML?</h4>
+                <div class="faqDiv">
+                    <h4>Is it worth knowing CSS and HTML?</h4>
+                </div>
                 <h5>Programmer should know both things, at least basics of them. :)</h5>
-                <h4>Is that page free?</h4>
+                <div class="faqDiv">
+                    <h4>Is that page free?</h4>
+                </div>
                 <h5>Of course, yes!</h5>
             </div>
         </main>
