--- a/3/tags.html
+++ b/3/tags.html
@@ -44,6 +44,7 @@
           <b>This text is in bold.</b><br />
           <i>This one is in italic.</i><br />
           <span>Some <small>small text</small> inside regular text.</span><br />
+          <p class="shadowedText">Here we've got some text with shadow</p><br />
         </div>
         <div class="images">
           <a href="img/tags.PNG" download>
