--- a/3/divs.html
+++ b/3/divs.html
@@ -20,7 +20,7 @@
         <li><a href="tables.html">Tables</a></li>
         <li class="selected"><a href="divs.html">Divs</a></li>
         <li><a href="seo.html">SEO</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="bootstrap.html">Bootstrap</a></li>
         <li class="dropdown">
           <button class="dropbtn">General</button>
           <div class="dropdown-content">
