--- a/3/index.html
+++ b/3/index.html
@@ -21,6 +21,7 @@
         <li><a href="tables.html">Tables</a></li>
         <li><a href="divs.html">Divs</a></li>
         <li><a href="seo.html">SEO</a></li>
+        <li><a href="bootstrap.html">Bootstrap</a></li>
         <li class="dropdown">
           <button class="dropbtn">General</button>
           <div class="dropdown-content">
