--- a/3/tables.html
+++ b/3/tables.html
@@ -20,6 +20,7 @@
         <li class="selected"><a href="tables.html">Tables</a></li>
         <li><a href="divs.html">Divs</a></li>
         <li><a href="seo.html">SEO</a></li>
+        <li><a href="bootstrap.html">Bootstrap</a></li>
         <li class="dropdown">
           <button class="dropbtn">General</button>
           <div class="dropdown-content">
