--- a/3/tables.html
+++ b/3/tables.html
@@ -37,45 +37,49 @@
       <div id="content">
         <h2 class="pageHeader">Tables</h2>
 
-        <div class="examples">
-          <table class="tableBody">
-            <tr>
-              <th colspan="4" style="width: 300px;">Example table</th>
-            </tr>
-            <tr>
-              <td>ID</td>
-              <td>Date</td>
-              <td>Name</td>
-              <td>Score</td>
-            </tr>
-            <tr>
-              <td>0</td>
-              <td>1.01.2001</td>
-              <td>Doe</td>
-              <td>33</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>3.02.2002</td>
-              <td>Moe</td>
-              <td>13</td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>4.04.2004</td>
-              <td>Joe</td>
-              <td>42</td>
-            </tr>
-            <tr>
-              <td>Sum</td>
-              <td colspan="3" style="text-align: center">88</td>
-            </tr>
-          </table>
-        </div>
-        <div class="images">
-          <a href="img/table.PNG" download>
-            <img src="img/table.PNG" alt="Tables HTML code" />
-          </a>
+        <div class="row">
+          <div class="col">
+            <table class="table table-dark">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">First</th>
+                  <th scope="col">Last</th>
+                  <th scope="col">Handle</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Mark</td>
+                  <td>Otto</td>
+                  <td>@mdo</td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>Jacob</td>
+                  <td>Thornton</td>
+                  <td>@fat</td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td>Larry</td>
+                  <td>the Bird</td>
+                  <td>@twitter</td>
+                </tr>
+              </tbody>
+              <tfoot>
+                <td colspan="4">SUM IS 6</td>
+              </tfoot>
+            </table>
+          </div>
+          <div class="col">
+            <div class="images">
+              <a href="img/table.PNG" download>
+                <img src="img/table.PNG" alt="Tables HTML code" />
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </main>
